# fries

./: Cargo.toml  README.md
src/: cpu.rs  display  display.rs  fries.rs  mem.rs
